--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Base.AppTheme">
-
         <activity
             android:name=".activity.MainActivity"
             android:screenOrientation="portrait">
@@ -18,77 +17,64 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.TabLayoutTopActivity"
             android:label="TabLayoutSamples"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.TabLayoutBottomActivity"
             android:label="TabLayoutSamples"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.SnackbarActivity"
             android:label="SnackbarSamples"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.FabActivity"
             android:label="SnackbarSamples"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.PaletteDetailActivity"
             android:label="SnackbarSamples"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.AppBarLayoutActivity"
             android:label="SnackbarSamples"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"/>
-
+            android:theme="@style/AppTheme" />
         <activity
             android:name=".activity.BehaviorNestedActivity"
             android:label="SnackbarSamples"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BehaviorDependentActivity"
             android:label="SnackbarSamples"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.BehaviorNestedExpandActivity"
             android:label="SnackbarSamples"
-            android:screenOrientation="portrait"/>
-
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activity.TextInputActivity"
             android:label="TextInputLayout"
-            android:windowSoftInputMode="stateHidden"/>
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.BottomNavigationActivity"
             android:label="BottomNavigation"
-            android:windowSoftInputMode="stateHidden"/>
-
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.SearchResultActivity"
             android:label="@string/search_result"
             android:screenOrientation="portrait">
-
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
-
+                android:resource="@xml/searchable" />
         </activity>
-
+        <activity android:name=".activity.FragmentsActivity"></activity>
     </application>
 
 </manifest>
